--- a/Ultimate Eyecandy/Locale/Portuguese (pt-BR) .xml
+++ b/Ultimate Eyecandy/Locale/Portuguese (pt-BR) .xml
@@ -50,5 +50,11 @@
 		<Translation ID="PresetNameTooltip" String="Insira o nome das configurações pré-definidas" />
 		<Translation ID="ConfirmOverwrite" String="Confirmar sobrescrita" />
 		<Translation ID="Cancel" String="Cancelar" />
+		<Translation ID="SETTINGS_LOADMOSTRECENT" String="Carregar automaticamente o preset mais recente ao iniciar." />
+		<Translation ID="SETTINGS_ENABLESIMCONTROL" String="Ativar controle de tempo." />
+		<Translation ID="SETTINGS_ENABLESIMCONTROL_TOOLTIP" String="Ativar a funcionalidade de controle de tempo, incluindo o controle deslizante de hora do dia." />
+		<Translation ID="SETTINGS_DESIREDKEY" String="Selecionar a combinação de teclas preferida para acessar a interface do mod." />
+		<Translation ID="SETTINGS_DEBUGDATA" String="Registrar dados no log de saída de depuração." />
+		<Translation ID="SETTINGS_DEBUGDATA_TOOLTIP" String="Pode afetar o desempenho." />
 	</Translations>
 </Language>
